macro-template/tests/ui/duplicate_placeholder.stderr
error: duplicate template placeholder
 --> tests/ui/duplicate_placeholder.rs:5:18
  |
5 |         for (Ty, Ty) in [
  |                  ^^
